fix fail responsive on mobile

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ ul li {
     margin-bottom: 20px;
 }
 
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 600px){
     .container {
         width: 100%;
         margin: auto;
@@ -192,6 +192,7 @@ ul li {
     }
 
     .hero-text{
+        width: 100%;
         text-align: center;
     }
 
